<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_home"
            android:title="@string/navigation_item_home" />
        <item
            android:id="@+id/navOrders"
            android:icon="@drawable/ic_order"
            android:title="@string/navigation_item_my_orders" />
    </group>

</menu>
